gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail15691.d
version https://git-lfs.github.com/spec/v1
oid sha256:67d5a8cac4066017a6168c79514e78c837230a6f5748cc0a88785d30f28ce827
size 426
